# oracle-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  demo_examples.py  pyproject.toml  pytest.ini  setup.sh
demo/: __init__.py  agent_state.py  agents.py  langgraph_demo.py  mcp_client.py
docker-example/: .env.docker  README.md  docker-compose.yml  setup_testuser.sql
docker-example/init-scripts/: 00-create-user.sql  01-sample-data.sql
docs/: QUICK_REFERENCE.md  SETUP_GUIDE.md
examples/: github_copilot_config.json  sample_queries.sql
mcp_chat/: __init__.py  __main__.py  agent.py  chat.py  graph.py  llm.py  mcp_client.py
src/oracle_mcp_server/: server.py
tests/: __init__.py  conftest.py  test_database_inspector.py  test_integration.py  test_oracle_connection.py  test_oracle_mcp_server.py  test_query_executor.py  test_utils.py
